fish tracks in database format

--- a/code/MooringEvBuilder.ipynb
+++ b/code/MooringEvBuilder.ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "from glob import glob\n",
-    "from mooringParams import paramsDAFT6 as processParams # Each mooring has a specific params file with \n",
+    "from mooringParams import paramsDAFT1 as processParams # Each mooring has a specific params file with \n",
     "import numpy as np\n",
     "from evFileProcessing import evFuncs # ev COM functions\n",
     "import cartopy.crs as ccrs\n",
@@ -223,7 +223,7 @@
    "source": [
     "# To export fish tracks\n",
     "evFiles = glob(processParams.evParams.outputDir+'*.EV')\n",
-    "exportFiles = evFuncs.evFiles.evFishTracks(processParams,evFiles)"
+    "exportFiles = evFuncs.evFiles.evFishTracks(processParams,evFiles[0:2])"
    ]
   },
   {
