new track data format

--- a/code/MooringEvBuilder.ipynb
+++ b/code/MooringEvBuilder.ipynb
@@ -227,6 +227,252 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File Exported. Total time: 0m 14s\n",
+      "File Exported. Total time: 0m 15s\n",
+      "File Exported. Total time: 0m 14s\n",
+      "File Exported. Total time: 0m 14s\n",
+      "File Exported. Total time: 0m 15s\n",
+      "File Exported. Total time: 0m 13s\n",
+      "File Exported. Total time: 0m 15s\n",
+      "File Exported. Total time: 0m 14s\n",
+      "File Exported. Total time: 0m 14s\n",
+      "File Exported. Total time: 0m 16s\n",
+      "File Exported. Total time: 0m 17s\n",
+      "File Exported. Total time: 0m 14s\n",
+      "File Exported. Total time: 0m 15s\n",
+      "File Exported. Total time: 0m 18s\n",
+      "File Exported. Total time: 0m 17s\n",
+      "File Exported. Total time: 0m 15s\n",
+      "File Exported. Total time: 0m 14s\n",
+      "File Exported. Total time: 0m 16s\n",
+      "File Exported. Total time: 0m 16s\n",
+      "File Exported. Total time: 0m 18s\n",
+      "File Exported. Total time: 0m 16s\n",
+      "File Exported. Total time: 0m 13s\n",
+      "File Exported. Total time: 0m 12s\n",
+      "File Exported. Total time: 0m 13s\n",
+      "File Exported. Total time: 0m 11s\n",
+      "File Exported. Total time: 0m 11s\n",
+      "File Exported. Total time: 0m 11s\n",
+      "File Exported. Total time: 0m 11s\n",
+      "File Exported. Total time: 0m 10s\n",
+      "File Exported. Total time: 0m 11s\n",
+      "File Exported. Total time: 0m 10s\n",
+      "File Exported. Total time: 0m 11s\n",
+      "File Exported. Total time: 0m 10s\n",
+      "File Exported. Total time: 0m 10s\n",
+      "File Exported. Total time: 0m 10s\n",
+      "File Exported. Total time: 0m 11s\n",
+      "File Exported. Total time: 0m 10s\n",
+      "File Exported. Total time: 0m 11s\n",
+      "File Exported. Total time: 0m 10s\n",
+      "File Exported. Total time: 0m 11s\n",
+      "File Exported. Total time: 0m 13s\n",
+      "File Exported. Total time: 0m 12s\n",
+      "File Exported. Total time: 0m 12s\n",
+      "File Exported. Total time: 0m 12s\n",
+      "File Exported. Total time: 0m 11s\n",
+      "File Exported. Total time: 0m 11s\n",
+      "File Exported. Total time: 0m 11s\n",
+      "File Exported. Total time: 0m 13s\n",
+      "File Exported. Total time: 0m 15s\n",
+      "File Exported. Total time: 0m 17s\n",
+      "File Exported. Total time: 0m 16s\n",
+      "File Exported. Total time: 0m 12s\n",
+      "File Exported. Total time: 0m 12s\n",
+      "Done\n",
+      "File Exported. Total time: 0m 15s\n",
+      "File Exported. Total time: 0m 15s\n",
+      "File Exported. Total time: 0m 17s\n",
+      "File Exported. Total time: 0m 17s\n",
+      "File Exported. Total time: 0m 16s\n",
+      "File Exported. Total time: 0m 17s\n",
+      "File Exported. Total time: 0m 15s\n",
+      "File Exported. Total time: 0m 15s\n",
+      "File Exported. Total time: 0m 16s\n",
+      "File Exported. Total time: 0m 15s\n",
+      "File Exported. Total time: 0m 16s\n",
+      "File Exported. Total time: 0m 15s\n",
+      "File Exported. Total time: 0m 16s\n",
+      "File Exported. Total time: 0m 19s\n",
+      "File Exported. Total time: 0m 18s\n",
+      "File Exported. Total time: 0m 18s\n",
+      "File Exported. Total time: 0m 15s\n",
+      "File Exported. Total time: 0m 18s\n",
+      "File Exported. Total time: 0m 19s\n",
+      "File Exported. Total time: 0m 22s\n",
+      "File Exported. Total time: 0m 2s\n",
+      "File Exported. Total time: 0m 20s\n",
+      "File Exported. Total time: 0m 20s\n",
+      "File Exported. Total time: 0m 21s\n",
+      "File Exported. Total time: 0m 19s\n",
+      "File Exported. Total time: 0m 19s\n",
+      "File Exported. Total time: 0m 21s\n",
+      "File Exported. Total time: 0m 21s\n",
+      "File Exported. Total time: 0m 23s\n",
+      "File Exported. Total time: 0m 21s\n",
+      "File Exported. Total time: 0m 26s\n",
+      "File Exported. Total time: 0m 25s\n",
+      "File Exported. Total time: 0m 24s\n",
+      "File Exported. Total time: 0m 25s\n",
+      "File Exported. Total time: 0m 26s\n",
+      "File Exported. Total time: 0m 21s\n",
+      "File Exported. Total time: 0m 21s\n",
+      "File Exported. Total time: 0m 19s\n",
+      "Done\n",
+      "File Exported. Total time: 0m 16s\n",
+      "File Exported. Total time: 0m 16s\n",
+      "File Exported. Total time: 0m 15s\n",
+      "File Exported. Total time: 0m 15s\n",
+      "File Exported. Total time: 0m 14s\n",
+      "File Exported. Total time: 0m 15s\n",
+      "File Exported. Total time: 0m 17s\n",
+      "File Exported. Total time: 0m 16s\n",
+      "File Exported. Total time: 0m 16s\n",
+      "File Exported. Total time: 0m 16s\n",
+      "File Exported. Total time: 0m 15s\n",
+      "File Exported. Total time: 0m 18s\n",
+      "File Exported. Total time: 0m 19s\n",
+      "File Exported. Total time: 0m 12s\n",
+      "File Exported. Total time: 0m 12s\n",
+      "File Exported. Total time: 0m 12s\n",
+      "File Exported. Total time: 0m 12s\n",
+      "File Exported. Total time: 0m 14s\n",
+      "File Exported. Total time: 0m 15s\n",
+      "File Exported. Total time: 0m 16s\n",
+      "File Exported. Total time: 0m 14s\n",
+      "File Exported. Total time: 0m 15s\n",
+      "File Exported. Total time: 0m 17s\n",
+      "File Exported. Total time: 0m 16s\n",
+      "File Exported. Total time: 0m 18s\n",
+      "File Exported. Total time: 0m 17s\n",
+      "File Exported. Total time: 0m 15s\n",
+      "File Exported. Total time: 0m 14s\n",
+      "File Exported. Total time: 0m 13s\n",
+      "File Exported. Total time: 0m 13s\n",
+      "File Exported. Total time: 0m 12s\n",
+      "File Exported. Total time: 0m 12s\n",
+      "File Exported. Total time: 0m 12s\n",
+      "File Exported. Total time: 0m 12s\n",
+      "File Exported. Total time: 0m 12s\n",
+      "File Exported. Total time: 0m 15s\n",
+      "File Exported. Total time: 0m 17s\n",
+      "File Exported. Total time: 0m 18s\n",
+      "Done\n",
+      "File Exported. Total time: 0m 15s\n",
+      "File Exported. Total time: 0m 14s\n",
+      "File Exported. Total time: 0m 17s\n",
+      "File Exported. Total time: 0m 16s\n",
+      "File Exported. Total time: 0m 17s\n",
+      "File Exported. Total time: 0m 15s\n",
+      "File Exported. Total time: 0m 17s\n",
+      "File Exported. Total time: 0m 18s\n",
+      "File Exported. Total time: 0m 16s\n",
+      "File Exported. Total time: 0m 18s\n",
+      "File Exported. Total time: 0m 18s\n",
+      "File Exported. Total time: 0m 13s\n",
+      "File Exported. Total time: 0m 13s\n",
+      "File Exported. Total time: 0m 13s\n",
+      "File Exported. Total time: 0m 13s\n",
+      "File Exported. Total time: 0m 15s\n",
+      "File Exported. Total time: 0m 16s\n",
+      "File Exported. Total time: 0m 17s\n",
+      "File Exported. Total time: 0m 17s\n",
+      "File Exported. Total time: 0m 17s\n",
+      "File Exported. Total time: 0m 18s\n",
+      "File Exported. Total time: 0m 18s\n",
+      "File Exported. Total time: 0m 20s\n",
+      "File Exported. Total time: 0m 17s\n",
+      "File Exported. Total time: 0m 17s\n",
+      "File Exported. Total time: 0m 19s\n",
+      "File Exported. Total time: 0m 19s\n",
+      "File Exported. Total time: 0m 17s\n",
+      "File Exported. Total time: 0m 17s\n",
+      "File Exported. Total time: 0m 16s\n",
+      "File Exported. Total time: 0m 16s\n",
+      "File Exported. Total time: 0m 14s\n",
+      "File Exported. Total time: 0m 15s\n",
+      "File Exported. Total time: 0m 13s\n",
+      "File Exported. Total time: 0m 13s\n",
+      "File Exported. Total time: 0m 12s\n",
+      "File Exported. Total time: 0m 13s\n",
+      "File Exported. Total time: 0m 13s\n",
+      "File Exported. Total time: 0m 10s\n",
+      "Done\n",
+      "File Exported. Total time: 0m 12s\n",
+      "File Exported. Total time: 0m 13s\n",
+      "File Exported. Total time: 0m 14s\n",
+      "File Exported. Total time: 0m 15s\n",
+      "File Exported. Total time: 0m 16s\n",
+      "File Exported. Total time: 0m 16s\n",
+      "File Exported. Total time: 0m 17s\n",
+      "File Exported. Total time: 0m 18s\n",
+      "File Exported. Total time: 0m 17s\n",
+      "File Exported. Total time: 0m 17s\n",
+      "File Exported. Total time: 0m 16s\n",
+      "File Exported. Total time: 0m 20s\n",
+      "File Exported. Total time: 0m 18s\n",
+      "File Exported. Total time: 0m 16s\n",
+      "File Exported. Total time: 0m 18s\n",
+      "File Exported. Total time: 0m 17s\n",
+      "File Exported. Total time: 0m 19s\n",
+      "File Exported. Total time: 0m 12s\n",
+      "File Exported. Total time: 0m 13s\n",
+      "File Exported. Total time: 0m 12s\n",
+      "File Exported. Total time: 0m 13s\n",
+      "File Exported. Total time: 0m 12s\n",
+      "File Exported. Total time: 0m 14s\n",
+      "File Exported. Total time: 0m 15s\n",
+      "File Exported. Total time: 0m 16s\n",
+      "File Exported. Total time: 0m 16s\n",
+      "File Exported. Total time: 0m 16s\n",
+      "File Exported. Total time: 0m 17s\n",
+      "File Exported. Total time: 0m 7s\n",
+      "File Exported. Total time: 0m 18s\n",
+      "File Exported. Total time: 0m 17s\n",
+      "File Exported. Total time: 0m 16s\n",
+      "File Exported. Total time: 0m 17s\n",
+      "File Exported. Total time: 0m 14s\n",
+      "File Exported. Total time: 0m 14s\n",
+      "File Exported. Total time: 0m 13s\n",
+      "File Exported. Total time: 0m 13s\n",
+      "File Exported. Total time: 0m 13s\n",
+      "File Exported. Total time: 0m 12s\n",
+      "Done\n"
+     ]
+    }
+   ],
+   "source": [
+    "from mooringParams import paramsDAFT1 as processParams1 # Each mooring has a specific params file with \n",
+    "evFiles = glob(processParams1.evParams.outputDir+'*.EV')\n",
+    "exportFiles = evFuncs.evFiles.evFishTracks(processParams1,evFiles)\n",
+    "\n",
+    "from mooringParams import paramsDAFT2 as processParams2 # Each mooring has a specific params file with \n",
+    "evFiles = glob(processParams2.evParams.outputDir+'*.EV')\n",
+    "exportFiles = evFuncs.evFiles.evFishTracks(processParams2,evFiles)\n",
+    "\n",
+    "from mooringParams import paramsDAFT4 as processParams4 # Each mooring has a specific params file with \n",
+    "evFiles = glob(processParams4.evParams.outputDir+'*.EV')\n",
+    "exportFiles = evFuncs.evFiles.evFishTracks(processParams4,evFiles)\n",
+    "\n",
+    "from mooringParams import paramsDAFT5 as processParams5 # Each mooring has a specific params file with \n",
+    "evFiles = glob(processParams5.evParams.outputDir+'*.EV')\n",
+    "exportFiles = evFuncs.evFiles.evFishTracks(processParams5,evFiles)\n",
+    "\n",
+    "from mooringParams import paramsDAFT6 as processParams6 # Each mooring has a specific params file with \n",
+    "evFiles = glob(processParams6.evParams.outputDir+'*.EV')\n",
+    "exportFiles = evFuncs.evFiles.evFishTracks(processParams6,evFiles)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
