update linear tracks

--- a/code/buildTrackData_linear.ipynb
+++ b/code/buildTrackData_linear.ipynb
@@ -1088,25 +1088,25 @@
          },
          "camera": {
           "center": {
-           "x": 0.12647345870161208,
-           "y": 0.07354944074045666,
-           "z": -0.008044490516538438
+           "x": 0,
+           "y": 0,
+           "z": 0
           },
           "eye": {
-           "x": -0.3129661901334795,
-           "y": 1.2763630795098242,
-           "z": 1.0627313440001815
+           "x": 1.6792380705282757,
+           "y": 0.9736887402164112,
+           "z": 0.9589524178311717
           },
           "projection": {
            "type": "perspective"
           },
           "up": {
-           "x": 0.12757181047178856,
-           "y": -0.633080961851413,
-           "z": 0.7635010994846307
+           "x": 0,
+           "y": 0,
+           "z": 1
           }
          },
-         "dragmode": "orbit",
+         "dragmode": "turntable",
          "xaxis": {
           "title": {
            "text": "Distance_major_axis"
