start getting sea ice

--- a/code/MooringPlot.ipynb
+++ b/code/MooringPlot.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,12 +115,14 @@
     "df2 = readTracks('../data/analysisFiles/TrackRegions2_linear2.csv')\n",
     "df5 = readTracks('../data/analysisFiles/TrackRegions5_linear2.csv')\n",
     "dfD2T = pd.concat([df2,df5])\n",
-    "dfD3T = readTracks('../data/analysisFiles/TrackRegions6_linear2.csv')"
+    "dfD3T = readTracks('../data/analysisFiles/TrackRegions6_linear2.csv')\n",
+    "\n",
+    "dfD3Ice = pd.read_csv('../data/physicalData/C4_IceCover.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -145,13 +147,6 @@
     "dfCTDD2 = pd.concat([dfCTD2, dfCTD5])\n",
     "dfCTDD6 =readCTD(glob('../data/2019/DAFT3/SBE37/*.csv')[0])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 181,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
