sea ice building

--- a/code/SeaIce-OSISAF.ipynb
+++ b/code/SeaIce-OSISAF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,9 +38,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "92a0fd5f4d814921a7eb9f2a5b472866",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=749.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0ffac2fe9ca040b1adc6f66d6e8340f2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=757.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "dates = dfD1.datetime.map(lambda x: x.strftime('%Y%m%d')).astype(str).unique()\n",
     "iceC = []\n",
@@ -61,7 +104,7 @@
     "    except:\n",
     "        iceC.append(np.nan)\n",
     "dfD1Ice = pd.DataFrame({'datetime':pd.to_datetime(dates),'iceC':iceC})\n",
-    "dfD1Ice.to_csv('../data/physicalData/C11_IceCover.csv')\n",
+    "dfD1Ice.to_csv('../data/physicalData/OSISAF_C11_IceCover.csv')\n",
     "\n",
     "dates = dfD2.datetime.map(lambda x: x.strftime('%Y%m%d')).astype(str).unique()\n",
     "iceC = []\n",
@@ -82,28 +125,7 @@
     "    except:\n",
     "        iceC.append(np.nan)\n",
     "dfD2Ice = pd.DataFrame({'datetime':pd.to_datetime(dates),'iceC':iceC})\n",
-    "dfD2Ice.to_csv('../data/physicalData/C1_IceCover.csv')\n",
-    "\n",
-    "dates = dfD3.datetime.map(lambda x: x.strftime('%Y%m%d')).astype(str).unique()\n",
-    "iceC = []\n",
-    "for date in tqdm(dates):\n",
-    "    try:\n",
-    "        url = 'ftp://osisaf.met.no/archive/ice/conc/'+date[:4]+'/'+date[4:6]+'/ice_conc_nh_ease-125_multi_'+date+'1200.nc' #ftp://sidads.colorado.edu/pub/DATASETS/NOAA/G02202_V3/north/daily/2017/seaice_conc_daily_nh_f17_'+date+'_v03r01.nc\n",
-    "        req = urllib.request.Request(url)\n",
-    "        with urllib.request.urlopen(req) as resp:\n",
-    "            ds = xr.open_dataset(io.BytesIO(resp.read()))\n",
-    "            ice = ds['ice_conc'].values[:]\n",
-    "        ice = np.asarray(np.squeeze(ice/100.))\n",
-    "        ice[np.where(ice <= 0.1)] = np.nan\n",
-    "        lat = ds['lat'].values[:]\n",
-    "        lon = ds['lon'].values[:]\n",
-    "        mlat, mlon = 71.038916, -160.50353\n",
-    "        iceC.append(np.nanmean(ice[(lat >mlat-.2) & (lat < mlat+.2) & (lon < mlon+.2) & (lon > mlon-.2)]))\n",
-    "        ds.close()\n",
-    "    except:\n",
-    "        iceC.append(np.nan)\n",
-    "dfD3Ice = pd.DataFrame({'datetime':pd.to_datetime(dates),'iceC':iceC})\n",
-    "dfD3Ice.to_csv('../data/physicalData/C4_IceCover.csv')"
+    "dfD2Ice.to_csv('../data/physicalData/OSISAF_C1_IceCover.csv')"
    ]
   },
   {
