new datasets for all frequencies

--- a/code/AxiomData/AxiomMoorings.ipynb
+++ b/code/AxiomData/AxiomMoorings.ipynb
@@ -98,20 +98,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filesD1Y1 = glob('../data/2018/EVFiles/DAFT1/exports/Loaded*.csv')\n",
-    "filesD1Y2 = glob('../data/2019/EVFiles/DAFT1/exports/Loaded*.csv')\n",
-    "filesD2Y1 = glob('../data/2018/EVFiles/DAFT2/exports/Loaded*.csv')\n",
-    "filesD2Y2 = glob('../data/2019/EVFiles/DAFT2/exports/Loaded*.csv')\n",
-    "filesD3Y2 = glob('../data/2019/EVFiles/DAFT3/exports/Loaded*.csv')\n",
+    "# This builds out the axiom csv files\n",
+    "fnames = ['C11_2017-2018_WBAT','C11_2018-2019_WBAT',\n",
+    "             'C1_2017-2018_WBAT','C1_2018-2019_WBAT',\n",
+    "             'C4_2018-2019_WBAT']\n",
+    "deployments = [['DAFT1','2018'],['DAFT1','2019'],['DAFT2','2018'],['DAFT2','2019'],['DAFT3','2019']]\n",
+    "ct =0\n",
     "\n",
-    "fnames = ['C11_2017-2018_WBAT_70kHz.csv','C11_2018-2019_WBAT_70kHz.csv',\n",
-    " 'C1_2017-2018_WBAT_70kHz.csv','C1_2018-2019_WBAT_70kHz.csv',\n",
-    " 'C4_2018-2019_WBAT_70kHz.csv']\n",
-    "ct = 0\n",
-    "for filel in [filesD1Y1,filesD1Y2,filesD2Y1,filesD2Y2,filesD3Y2]:\n",
-    "    df = evFuncs.evExports.readEvExports(filel)\n",
-    "    df[['layer','sA']].to_csv(fnames[ct])\n",
+    "for d in deployments:\n",
+    "    df70 = evFuncs.evExports.readEvExports(sorted(glob('E:/MooredEchosounders/data/'+d[1]+'/EVFiles/'+d[0]+'/exports/1m/70*.csv')))\n",
+    "    df38 = evFuncs.evExports.readEvExports(sorted(glob('E:/MooredEchosounders/data/'+d[1]+'/EVFiles/'+d[0]+'/exports/1m/38*.csv')))\n",
+    "    df200 = evFuncs.evExports.readEvExports(sorted(glob('E:/MooredEchosounders/data/'+d[1]+'/EVFiles/'+d[0]+'/exports/1m/200*.csv')))\n",
+    "   \n",
+    "    df70['DateTime'] = pd.to_datetime(df70.index.map(lambda x: x.strftime('%Y-%m-%d %H')))\n",
+    "    df70_clean = df70.set_index(['DateTime','layer'])\n",
+    "    df38['DateTime'] = pd.to_datetime(df38.index.map(lambda x: x.strftime('%Y-%m-%d %H')))\n",
+    "    df38_clean = df38.set_index(['DateTime','layer'])\n",
+    "    df200['DateTime'] = pd.to_datetime(df200.index.map(lambda x: x.strftime('%Y-%m-%d %H')))\n",
+    "    df200_clean = df200.set_index(['DateTime','layer'])\n",
+    "    if (d[0] == 'DAFT1')&(d[1]=='2019'):\n",
+    "        df38_clean['sA'] = np.nan\n",
+    "    df70_clean['sA'].to_csv('AxiomData/'+fnames[ct]+'_70kHz.csv')\n",
+    "    df38_clean['sA'].to_csv('AxiomData/'+fnames[ct]+'_38kHz.csv')\n",
+    "    df200_clean['sA'].to_csv('AxiomData/'+fnames[ct]+'_200kHz.csv')\n",
     "    ct+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This can be used to compare the exports and the packaged axiom datasets\n",
+    "f, (ax1)= plt.subplots(1,1,figsize=(20,8),sharex=True, sharey=True,dpi=150)\n",
+    "\n",
+    "df1 = evFuncs.evExports.readEvExports(sorted(glob('E:/MooredEchosounders/data/2018/EVFiles/'+daft+'/exports/1m/38*.csv'))+sorted(glob('E:/MooredEchosounders/data/2019/EVFiles/'+daft+'/exports/1m/38*.csv')))\n",
+    "ax1=plt.subplot(311)\n",
+    "a = df1['sA'].resample('2H').sum()\n",
+    "a.plot( style='.',label='Wakeups',legend=False,axes=ax1, color='tomato')\n",
+    "a.resample('D').mean().plot(legend=False,label='Daily Mean', axes=ax1,linewidth=2,color='k')\n",
+    "\n",
+    "#ax1.set_ylim([-60,1000])\n",
+    "#ax1.set_yticks([0,1000,2000,3000])\n",
+    "ax1.set_xlim([pd.to_datetime('2017-8-7'),pd.to_datetime('2019-9-4')])\n",
+    "ax1.grid()\n",
+    "ax1.legend(['Wakeup Mean','Daily Mean'])#,loc = 'lower left')\n",
+    "#ax1.set_xticklabels([])\n",
+    "#ax1.xaxis.label.set_visible(False)\n",
+    "plt.ylabel('70 kHz Mean Sv')\n",
+    "\n",
+    "df38_clean.reset_index().set_index('DateTime').resample('2H').sum().sA.plot(ax=ax1)"
    ]
   }
  ],
