update axiom mooring data with bew MF exports

--- a/code/AxiomData/AxiomMoorings.ipynb
+++ b/code/AxiomData/AxiomMoorings.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,6 +19,8 @@
     "import datetime\n",
     "%matplotlib inline\n",
     "import numpy as np\n",
+    "import sys\n",
+    "sys.path.append(\"..\") \n",
     "from evFileProcessing import evFuncs # ev COM functions"
    ]
   },
@@ -94,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,9 +120,9 @@
     "    df200_clean = df200.set_index(['DateTime','layer'])\n",
     "    if (d[0] == 'DAFT1')&(d[1]=='2019'):\n",
     "        df38_clean['sA'] = np.nan\n",
-    "    df70_clean['sA'].to_csv('AxiomData/'+fnames[ct]+'_70kHz.csv')\n",
-    "    df38_clean['sA'].to_csv('AxiomData/'+fnames[ct]+'_38kHz.csv')\n",
-    "    df200_clean['sA'].to_csv('AxiomData/'+fnames[ct]+'_200kHz.csv')\n",
+    "    df70_clean['sA'].to_csv(fnames[ct]+'_70kHz.csv')\n",
+    "    df38_clean['sA'].to_csv(fnames[ct]+'_38kHz.csv')\n",
+    "    df200_clean['sA'].to_csv(fnames[ct]+'_200kHz.csv')\n",
     "    ct+=1"
    ]
   },
