--- a/code/fluxWorkbook.ipynb
+++ b/code/fluxWorkbook.ipynb
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
       "45\n",
       "537991.960283465\n",
       "0.01858095484205838\n",
-      "558291.6648118331\n",
+      "0.12296959092193481\n",
       "592390.5698925684\n",
       "80\n",
       "6005005.2752705\n",
@@ -449,7 +449,7 @@
       "45\n",
       "1169277.064466316\n",
       "0.030227887796028016\n",
-      "1038511.2042554487\n",
+      "0.2672633290208723\n",
       "992442.0121191919\n",
       "80\n",
       "1573681.9476836207\n",
@@ -472,7 +472,7 @@
     "\n",
     "print(np.sum(df1.resample('7D').mean().fv*(60*60*24*7)))\n",
     "print(df1.fv.mean())\n",
-    "print(np.sum(df1.resample('1D').mean().fv*(60*60*24)))\n",
+    "print(np.sum(df1.resample('7D').mean().fv*(60*60*24))*(160*1000)/10E10)\n",
     "print(df1.fv.mean()*60*60*24*len(np.unique(df1.index.date)))\n",
     "\n",
     "dfBs = evFuncs.evExports.readEvExports(filesD2Y1)\n",
@@ -492,7 +492,7 @@
     "\n",
     "print(np.sum(df1.resample('7D').mean().fv*(60*60*24*7)))\n",
     "print(df1.fv.mean())\n",
-    "print(np.sum(df1.resample('1D').mean().fv*(60*60*24)))\n",
+    "print(np.sum(df1.resample('7D').mean().fv*(60*60*24))*(160*1000)/10E10)\n",
     "print(df1.fv.mean()*60*60*24*len(np.unique(df1.index.date)))\n",
     "\n",
     "dfBs = evFuncs.evExports.readEvExports(filesD2Y2)\n",
@@ -514,50 +514,6 @@
     "print(df1.fv.mean())\n",
     "print(np.sum(df1.resample('1D').mean().fv*(60*60*24)))\n",
     "print(df1.fv.mean()*60*60*24*len(np.unique(df1.index.date)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "385"
-      ]
-     },
-     "execution_count": 118,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(np.unique(df1.index.date))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "639398.1113869234\n",
-      "0.022470975012192383\n"
-     ]
-    }
-   ],
-   "source": [
-    "dfBs = evFuncs.evExports.readEvExports(filesD1Y1)\n",
-    "dfT = readTracks('../data/analysisFiles/TrackRegions1_linear2.csv')\n",
-    "dfADCP = pmelTransport(['../data/physicalData/PMEL_2017_17ckp11a_wcp_vel.nc'])\n",
-    "df1 = combF(dfBs,dfT, dfADCP,47, rotate=True)\n",
-    "\n",
-    "print(np.sum(df1.resample('2H').mean().fv*(60*60*2)))\n",
-    "print(df1.fv.mean())\n"
    ]
   },
   {
