stats diff between temp

--- a/code/F2_TimeSeries.ipynb
+++ b/code/F2_TimeSeries.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,18 +150,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e33239a4f0>"
+       "9.37788018900322"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.37788018900322\n"
+     ]
     },
     {
      "data": {
@@ -177,6 +192,7 @@
     }
    ],
    "source": [
+    "all = []\n",
     "fig = plt.figure(figsize=(4,4),dpi=150)\n",
     "df = dfD3\n",
     "a = df['sA'].resample('2H').sum()\n",
@@ -184,6 +200,7 @@
     "df = dfD3Ctd\n",
     "a = df.resample('D').mean()\n",
     "c = a.join(b)\n",
+    "all.append(c)\n",
     "plt.semilogy(c.Temp,c.sA,'.',color='dodgerblue',alpha=0.4)\n",
     "\n",
     "\n",
@@ -194,6 +211,7 @@
     "a = df.resample('D').mean()\n",
     "c = a.join(b)\n",
     "plt.semilogy(c.Temp,(c.sA),'.',color='gold',alpha=0.4)\n",
+    "all.append(c)\n",
     "\n",
     "\n",
     "df = dfD1\n",
@@ -203,12 +221,16 @@
     "a = df.resample('D').mean()\n",
     "c = a.join(b)\n",
     "plt.semilogy(c.Temp,(c.sA),'.',color='tomato',alpha=0.4)\n",
+    "all.append(c)\n",
     "\n",
     "plt.axis([-2,8,0,10**4])\n",
     "plt.grid()\n",
     "plt.xlabel('Bottom Temperature ($\\degree$)C')\n",
     "plt.ylabel('70 kHz Backscatter (s$_{A}$, m$^{2}$ nmi$^{-2}$)')\n",
-    "plt.legend(['North','Central','South'],loc='lower right')"
+    "plt.legend(['North','Central','South'],loc='lower right')\n",
+    "\n",
+    "z = pd.concat(all)\n",
+    "print(z[z.Temp>0].sA.mean()/z[z.Temp<0].sA.mean())"
    ]
   },
   {
