ttest on log transform

--- a/code/F2_TimeSeries.ipynb
+++ b/code/F2_TimeSeries.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,23 +113,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Tracks\n",
-    "df1 = readTracks('../data/analysisFiles/TrackRegions1_linear3.csv')\n",
-    "df4 = readTracks('../data/analysisFiles/TrackRegions4_linear3.csv')\n",
+    "df1 = readTracks('../data/analysisFiles/TrackRegions1_linear4.csv')\n",
+    "df4 = readTracks('../data/analysisFiles/TrackRegions4_linear4.csv')\n",
     "dfD1T = pd.concat([df1,df4])\n",
-    "df2 = readTracks('../data/analysisFiles/TrackRegions2_linear3.csv')\n",
-    "df5 = readTracks('../data/analysisFiles/TrackRegions5_linear3.csv')\n",
+    "df2 = readTracks('../data/analysisFiles/TrackRegions2_linear4.csv')\n",
+    "df5 = readTracks('../data/analysisFiles/TrackRegions5_linear4.csv')\n",
     "dfD2T = pd.concat([df2,df5])\n",
-    "dfD3T = readTracks('../data/analysisFiles/TrackRegions6_linear3.csv')"
+    "dfD3T = readTracks('../data/analysisFiles/TrackRegions6_linear4.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,9 +401,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ttest_indResult(statistic=11.049750275576038, pvalue=2.1433579275069884e-26)\n",
-      "Ttest_indResult(statistic=9.949537957489389, pvalue=5.521941538475995e-22)\n",
-      "Ttest_indResult(statistic=7.21564959835477, pvalue=2.9977689916581342e-12)\n"
+      "Ttest_indResult(statistic=17.68845273507329, pvalue=9.55784405060594e-59)\n",
+      "7.528467131563787\n",
+      "Ttest_indResult(statistic=14.14692010892257, pvalue=2.002697654727966e-40)\n",
+      "10.343216028595274\n",
+      "Ttest_indResult(statistic=7.081708547614716, pvalue=7.073458229511406e-12)\n",
+      "2.8345536699627725\n"
      ]
     },
     {
@@ -453,7 +456,8 @@
     "    plt.setp(box[\"fliers\"], markeredgecolor=col)\n",
     "    plt.setp(box[\"boxes\"], facecolor=col,alpha=0.7)\n",
     "    ct+=1\n",
-    "    print(ttest_ind(c[(c.iceC*100<20)&(~c.sA.isnull())].sA, c[(c.iceC*100>20)&(~c.sA.isnull())].sA))\n",
+    "    print(ttest_ind(np.log10(c[(c.iceC*100<20)&(~c.sA.isnull())].sA), np.log10(c[(c.iceC*100>20)&(~c.sA.isnull())].sA)))\n",
+    "    print((np.mean(c[(c.iceC*100<20)&(~c.sA.isnull())].sA)/np.mean(c[(c.iceC*100>20)&(~c.sA.isnull())].sA)))\n",
     "plt.yscale('log')\n",
     "plt.xticks([1, 1.5, 2, 2.5,3,3.5], ['', '', '','','',''])\n",
     "plt.axis([0.75,3.75,0,10**4])\n",
