modified bigfig to consolidate

--- a/code/ncepwinds.ipynb
+++ b/code/ncepwinds.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,214 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import metpy.calc as mp\n",
+    "from metpy.units import units\n",
+    "dfWind['speed'] = mp.wind_speed(units.Quantity(dfWind.uwnd.values,'cm/s'),units.Quantity(dfWind.vwnd.values,'cm/s'))\n",
+    "dfWind['direction'] = mp.wind_direction(units.Quantity(dfWind.uwnd.values,'cm/s'),units.Quantity(dfWind.vwnd.values,'cm/s'),convention='to')\n",
+    "dfWind.to_csv('C:/Users/rober/Downloads/NCEPwind.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lon</th>\n",
+       "      <th>uwnd</th>\n",
+       "      <th>vwnd</th>\n",
+       "      <th>speed</th>\n",
+       "      <th>direction</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>time</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2017-01-01 00:00:00</th>\n",
+       "      <td>70.0</td>\n",
+       "      <td>195.0</td>\n",
+       "      <td>-4.999999</td>\n",
+       "      <td>3.200001</td>\n",
+       "      <td>5.936329</td>\n",
+       "      <td>302.619263</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-01-01 06:00:00</th>\n",
+       "      <td>70.0</td>\n",
+       "      <td>195.0</td>\n",
+       "      <td>-9.200000</td>\n",
+       "      <td>8.500002</td>\n",
+       "      <td>12.525575</td>\n",
+       "      <td>312.735260</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-01-01 12:00:00</th>\n",
+       "      <td>70.0</td>\n",
+       "      <td>195.0</td>\n",
+       "      <td>-1.600000</td>\n",
+       "      <td>20.400003</td>\n",
+       "      <td>20.462652</td>\n",
+       "      <td>355.515381</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-01-01 18:00:00</th>\n",
+       "      <td>70.0</td>\n",
+       "      <td>195.0</td>\n",
+       "      <td>2.400000</td>\n",
+       "      <td>19.200001</td>\n",
+       "      <td>19.349419</td>\n",
+       "      <td>7.125015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-01-02 00:00:00</th>\n",
+       "      <td>70.0</td>\n",
+       "      <td>195.0</td>\n",
+       "      <td>-2.499999</td>\n",
+       "      <td>11.800001</td>\n",
+       "      <td>12.061924</td>\n",
+       "      <td>348.037964</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-12-30 18:00:00</th>\n",
+       "      <td>70.0</td>\n",
+       "      <td>195.0</td>\n",
+       "      <td>-2.699998</td>\n",
+       "      <td>-9.100000</td>\n",
+       "      <td>9.492102</td>\n",
+       "      <td>196.525787</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-12-31 00:00:00</th>\n",
+       "      <td>70.0</td>\n",
+       "      <td>195.0</td>\n",
+       "      <td>-0.400000</td>\n",
+       "      <td>-7.499999</td>\n",
+       "      <td>7.510658</td>\n",
+       "      <td>183.052887</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-12-31 06:00:00</th>\n",
+       "      <td>70.0</td>\n",
+       "      <td>195.0</td>\n",
+       "      <td>0.100000</td>\n",
+       "      <td>-9.499998</td>\n",
+       "      <td>9.500525</td>\n",
+       "      <td>179.396912</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-12-31 12:00:00</th>\n",
+       "      <td>70.0</td>\n",
+       "      <td>195.0</td>\n",
+       "      <td>0.600002</td>\n",
+       "      <td>-5.399999</td>\n",
+       "      <td>5.433230</td>\n",
+       "      <td>173.659790</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-12-31 18:00:00</th>\n",
+       "      <td>70.0</td>\n",
+       "      <td>195.0</td>\n",
+       "      <td>0.300002</td>\n",
+       "      <td>-7.400000</td>\n",
+       "      <td>7.406079</td>\n",
+       "      <td>177.678467</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4380 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      lat    lon      uwnd       vwnd      speed   direction\n",
+       "time                                                                        \n",
+       "2017-01-01 00:00:00  70.0  195.0 -4.999999   3.200001   5.936329  302.619263\n",
+       "2017-01-01 06:00:00  70.0  195.0 -9.200000   8.500002  12.525575  312.735260\n",
+       "2017-01-01 12:00:00  70.0  195.0 -1.600000  20.400003  20.462652  355.515381\n",
+       "2017-01-01 18:00:00  70.0  195.0  2.400000  19.200001  19.349419    7.125015\n",
+       "2017-01-02 00:00:00  70.0  195.0 -2.499999  11.800001  12.061924  348.037964\n",
+       "...                   ...    ...       ...        ...        ...         ...\n",
+       "2019-12-30 18:00:00  70.0  195.0 -2.699998  -9.100000   9.492102  196.525787\n",
+       "2019-12-31 00:00:00  70.0  195.0 -0.400000  -7.499999   7.510658  183.052887\n",
+       "2019-12-31 06:00:00  70.0  195.0  0.100000  -9.499998   9.500525  179.396912\n",
+       "2019-12-31 12:00:00  70.0  195.0  0.600002  -5.399999   5.433230  173.659790\n",
+       "2019-12-31 18:00:00  70.0  195.0  0.300002  -7.400000   7.406079  177.678467\n",
+       "\n",
+       "[4380 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfWind"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "34\n",
+      "60\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(dfWind[(dfWind.index>'2017-12-01')&(dfWind.index<'2018-05-01')&(dfWind.vwnd >10)]))\n",
+    "print(len(dfWind[(dfWind.index>'2018-12-01')&(dfWind.index<'2019-05-01')&(dfWind.vwnd >10)]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +253,7 @@
        "Text(0, 0.5, 'V Wind')"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
